# models/user.js
@@ -1,22 +1,22 @@
 import mongoose from 'mongoose';
 
 const userSchema = mongoose.Schema({
-  username: {
-    type: String,
-  },
-  password: {
-    type: String,
-  },
-  email: {
-    type: String,
-  },
-  name: {
-    type: String,
-  },
-  createdAt: {
-    type: Date,
-    default: Date.now
-  }
+    username: {
+        type: String
+    },
+    password: {
+        type: String
+    },
+    email: {
+        type: String
+    },
+    name: {
+        type: String
+    },
+    createdAt: {
+        type: Date,
+        default: Date.now
+    }
 });
 
 export default mongoose.model('users', userSchema);
