# routes/user.js
@@ -1,9 +1,12 @@
-import { getAllUsers, create, getUser } from '../controllers/user.js';
+import { getAllUsers, create, getUser, updateUser, deleteUser } from '../controllers/user.js';
+
 import express from 'express';
 const router = express.Router();
 
 router.get('/', getAllUsers);
 router.post('/', create);
-router.get('/:id', getUser);
+router.get('/:username', getUser);
+router.put('/:username', updateUser);
+router.delete('/:username', deleteUser);
 
 export default router;
